<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@android:color/white"
    tools:context=".PrivacyFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:paddingTop="10dp"
                android:contentDescription="Back"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:layout_gravity="start" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:fontFamily="@font/amarante"
                android:paddingRight="20dp"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="40sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/about_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_text"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:lineSpacingExtra="8dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/contact_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:padding="16dp"
            android:textSize="16sp"
            android:textColor="@android:color/darker_gray"
            android:lineSpacingExtra="8dp"
            android:background="@android:color/white"
            android:elevation="2dp"
            android:textAlignment="center"
            android:layout_marginTop="16dp" />

    </LinearLayout>

</FrameLayout>
